fix: overlapping submit button by validation messages

--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -1,8 +1,4 @@
-* {
-  box-sizing: border-box;
-}
-
-.container {
+.login-component {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,14 +10,13 @@
   .login-form {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 
     width: 100%;
     max-width: 400px;
-    height: 40svh;
-    padding: 1rem;
+    padding: 3rem;
     border: 1px solid black;
     border-radius: 10px;
 
@@ -30,6 +25,7 @@
       position: relative;
       width: 100%;
       max-width: 350px;
+      margin-bottom: 35px;
 
       .email,
       .password {
@@ -82,6 +78,10 @@
           color: red;
         }
       }
+    }
+
+    .submit-button {
+      margin-top: 15px;
     }
   }
 }
